contracts/tier-verifier/test_output.txt
   Compiling tier-verifier v0.2.0 (C:\Users\Jeff\Mixtape Auto\smol-fe\contracts\tier-verifier)
warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
   --> src\lib.rs:137:22
    |
137 |         env.events().publish((Symbol::new(&env, "AdminChanged"),), (admin, new_admin));
    |                      ^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
   --> src\lib.rs:153:22
    |
153 |         env.events().publish((Symbol::new(&env, "VkeyUpdated"),), ());
    |                      ^^^^^^^

error[E0308]: mismatched types
    --> src\lib.rs:192:49
     |
 192 |         let tier_val = BytesN::from_array(&env, &U256::from_u32(&env, tier).to_be_bytes());
     |                        ------------------       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&[u8; _]`, found `&Bytes`
     |                        |
     |                        arguments to this function are incorrect
     |
     = note: expected reference `&[u8; _]`
                found reference `&soroban_sdk::Bytes`
note: associated function defined here
    --> C:\Users\Jeff\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\soroban-sdk-25.1.0\src\bytes.rs:1199:12
     |
1199 |     pub fn from_array(env: &Env, items: &[u8; N]) -> BytesN<N> {
     |            ^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
   --> src\lib.rs:213:22
    |
213 |         env.events().publish(
    |                      ^^^^^^^

warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
   --> src\lib.rs:336:22
    |
336 |         env.events().publish(
    |                      ^^^^^^^

error[E0382]: borrow of moved value: `scalar_bytes`
   --> src\lib.rs:272:22
    |
266 |             let scalar_bytes = public_inputs.get(i).unwrap();
    |                 ------------ move occurs because `scalar_bytes` has type `soroban_sdk::BytesN<32>`, which does not implement the `Copy` trait
267 |             let scalar = Fr::from_bytes(scalar_bytes);
    |                                         ------------ value moved here
...
272 |             for b in scalar_bytes.iter() {
    |                      ^^^^^^^^^^^^ value borrowed here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
267 |             let scalar = Fr::from_bytes(scalar_bytes.clone());
    |                                                     ++++++++

Some errors have detailed explanations: E0308, E0382.
For more information about an error, try `rustc --explain E0308`.
warning: `tier-verifier` (lib test) generated 4 warnings
error: could not compile `tier-verifier` (lib test) due to 2 previous errors; 4 warnings emitted
